refactor : Lotto 메서드 수정에 의한 변경